Fix: Some dialog box headings were not centered

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -593,7 +593,13 @@ html {
 }
 
 .formDialogHeader>h1 {
+    /* margin-inline: 0 !important; */
+}
+
+.formDialogHeaderTitle{
     margin-inline: 0 !important;
+    text-align: center;
+    padding: 0 0.5em !important;
 }
 
 .collapseContent {
